add: adds some text to the html

--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Why hello world :D</h1>
+    <h2>welcome</h2>
+    <h3>to this awesome sauce website</h3>
 </body>
 </html>
